stream_header: Fix broken header color and outflowing boundary.
The stream header was moved below the selection option and the
boundary selection input was overflowing, both were fixed via
this commit.

--- a/static/styles/app_components.scss
+++ b/static/styles/app_components.scss
@@ -403,6 +403,7 @@
 
 .stream_header_colorblock {
     margin-bottom: 5px;
+    z-index: 1000;
 }
 
 .edit-controls .fa-angle-right,
