--- a/static/styles/popovers.scss
+++ b/static/styles/popovers.scss
@@ -428,9 +428,8 @@ ul {
         margin-bottom: 5px !important;
         border-left: 0px;
         padding-left: 0px;
-        border-radius: 0px 3px 3px 0px;
-        // Extra 1px for post-selection boundry
-        margin: 0 5px 0 -11px;
+        border-radius: 3px;
+        margin: 0 5px 0 -10px;
         text-indent: 10px;
     }
     .inline_topic_edit {
